# Tienda-Online

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  COMPLETION_SUMMARY.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  TESTING_CHECKLIST.md
backend/: .dockerignore  .env  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/v1/: admin.py  auth.py  cart.py  orders.py  products.py
backend/app/core/: config.py  security.py
backend/app/crud/: crud.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/utils/: seed.py
frontend/: package-lock.json  package.json
frontend/src/ai/flows/: personalized-product-recommendations.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/orders/: page.tsx
frontend/src/app/admin/products/: page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/checkout/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/product/[slug]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ProductCard.tsx
frontend/src/components/forms/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/contexts/: AuthContext.tsx  CartContext.tsx
frontend/src/lib/: api.ts  data.ts  placeholder-images.json  placeholder-images.ts  types.ts
infra/: docker-compose.yml
