[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Karatsuyu <tabjulian07@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
pydantic = "^2.11.9"
pydantic-settings = "^2.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
aiofiles = "^24.1.0"
psycopg2-binary = "^2.9.10"
email-validator = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
